--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -6,8 +6,9 @@
 __accessControls=Access controls
 __add=Add
 __add_a_new_entry_definition=Add a new entry definition
-__add_a_new_forum_view=Add a new forum view
+__add_a_new_forum_view=Add a new folder view
 __add_a_new_profile_view=Add a new profile listing view
+__add_a_new_profile_entry_view=Add a new profile entry definition
 __add_a_new_workflow_process=Add a new workflow process
 __alignment=Alignment
 __allow_multiple=Allow multiple
@@ -21,6 +22,7 @@ __cancel=Cancel
 __cancel_button=Cancel button
 __close=Close
 __close_button=Close button
+__country=Country
 __custom_jsp=Custom jsp
 __data_item_name=Data item name
 __data_items_from_the_entry_form=Data items from the Entry Form
@@ -34,7 +36,8 @@ __deleteAccess=Delete access
 __description=Description
 __div=Div
 __divider=Divider
-__endParallelExecutionEnd a parallel workflow thread
+__emailAddress=Email address
+__endParallelThread=Parallel workflow thread ends
 __entry_attachments=Entry attachments
 __entry_data_item=Entry data item
 __entry_definition=Entry definition
@@ -57,7 +60,8 @@ __folder_file=File folder
 __folder_event=Calendar
 __form=Form
 __form_buttons=Form buttons
-__form_elements=Form elements
+__form_elements=Entry specific form elements
+__form_elements_common=Generic form elements
 __form_name=Form name
 __form_jsp_name=Form jsp name
 __forum_view=Forum view
@@ -99,8 +103,19 @@ __ok_button=OK button
 __onclick_routine=OnClick routine
 __onEntry=On entry
 __onExit=On exit
+__organization=Organization
 __parallelStateName=Parallel execution name
+__profile_data_item_name=Profile element
+__profile_element=Profile element
+__profile_elements=Profile elements
+__profile_entry_attachments=Attached files
+__profile_entry_data_item=Profile element
+__profile_entry_form_definition=Profile form definition
+__profile_entry_layout_options=Layout options
+__profile_entry_view=Profile view
+__profile_entry_view_definition=Profile view definition
 __profile_listing=Profile listing
+__profileName=User name
 __profile_view=Profile listing
 __profile_view_definition=Profile listing definition
 __profile_views=Profile listings
@@ -119,7 +134,7 @@ __selection_data_name=Selection data name
 __selection_string=Selection string
 __simple_text_area=Simple text area
 __size=Size
-__startParallelExecution=Start a parallel workflow thread
+__startParallelThread=Start a parallel workflow thread
 __startState=Start state
 __state=State
 __storage_media=Repository system
@@ -129,6 +144,8 @@ __title=Title
 __tool_bar=Tool bar
 __toState=To state
 __transition=Transition
+__transitionConditional=Conditional transition
+__transitionManual=Manual transition
 __transition_condition_on_date=Transition when date past
 __transition_condition_on_elapsed_time=Transition after time elapsed
 __transition_condition_on_modify=Transition on modify
@@ -153,13 +170,14 @@ __user_list=User list
 __userGroupAccess=Users and groups
 __view_entry_selectbox=View entry selectbox
 __view_jsp_name=View jsp name
-__waitForParallelExecution=Wait for parallel execution
+__waitForParallelThread=Wait for parallel thread to end
 __width=Width
 __workflow_process=Workflow process
 __workflow_processes=Workflow processes
 __workflow_variable=Workflow variable
 __workflow_variable_name=Variable name
 __workflow_variable_value=Variable value
+__zonName=Zon user name
 
 administration.configure_ldap=Configure LDAP
 administration.configure_roles=Configure Forum role definitions
@@ -226,6 +244,9 @@ definition.workflow_save_layout=Save layout
 definition.select_item=Select the item that you want to work on...
 definition.select_item_select=--make a selection--
 definition.select_reply_styles=--select reply types--
+definition.loading=Loading...
+definition.form_preview=Form preview
+
 entry.noTitle=no title
 
 errorcode.acl.denied={0} has no {1} access to the object
