--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -240,12 +240,17 @@ calendar.day.names.weekday=weekday
 calendar.day.names.weekendday=weekend day
 
 definition.builder=Definition builder
-definition.workflow_save_layout=Save layout
+definition.error.illegalMoveInto=Error: The target element cannot receive this element
+definition.error.invalidCharacter=Error: invalid character entered
+definition.error.nameNotUnique=Error: The specified name must be unique
+definition.error.noElement=Error: element no longer exists
+definition.error.notAnInteger=Error: not an integer
+definition.form_preview=Form preview
+definition.loading=Loading...
 definition.select_item=Select the item that you want to work on...
 definition.select_item_select=--make a selection--
 definition.select_reply_styles=--select reply types--
-definition.loading=Loading...
-definition.form_preview=Form preview
+definition.workflow_save_layout=Save layout
 
 entry.noTitle=no title
 
