File attachment and graphic support

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -68,6 +68,7 @@ __forum_view=Forum view
 __forum_view_definition=Forum view definition
 __forum_views=Forum views
 __general_layout_options=General layout options
+__graphic=Graphic
 __has_a_duration=Has a duration (start and end times)?
 __height_px=Height (px)
 __help_data_name=The "data name" is the key used to store this element in the data base.<br>This value must be unique across elements in this entry type.<br>It should start with an alphabetic character and not contain any spaces.<br>Legal characters include alphabetic characters (a-z), numeric characters, hyphen and underscore.
@@ -115,7 +116,7 @@ __profile_entry_layout_options=Layout options
 __profile_entry_view=Profile view
 __profile_entry_view_definition=Profile view definition
 __profile_listing=Profile listing
-__profileName=User name
+__profile_name=User name
 __profile_view=Profile listing
 __profile_view_definition=Profile listing definition
 __profile_views=Profile listings
