--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -74,6 +74,7 @@ __height_px=Height (px)
 __help_data_name=The "data name" is the key used to store this element in the data base.<br>This value must be unique across elements in this entry type.<br>It should start with an alphabetic character and not contain any spaces.<br>Legal characters include alphabetic characters (a-z), numeric characters, hyphen and underscore.
 __help_form_button_alignment=Select whether the buttons should be aligned to the right or left on the page.
 __help_forum_view_type=Specify the type of folder: entry folders show a list of entries; file folders show a list of files; calendar folders show the entries in a date grid.
+__help_graphic_constraints=Specify the maximum width and height of the graphic. The graphic will be scaled to fit within those maximum values. The original aspect ratio will be maintained.
 __help_mark_as_inline=Mark an item as "Inline" if you want to put multiple items next to each other on the page.
 __help_radio_string=Enter the string to be displayed next to the radio button.
 __help_required=Marking an item as "required" means that the item must be filled-in before the entry form can be submitted.
@@ -92,6 +93,8 @@ __inline=Inline
 __layout_options=Layout options
 __left=Left
 __legend=Legend
+__max_graphic_height=Maximum graphic height (in pixels)
+__max_graphic_width=Maximum graphic width (in pixels)
 __modify=Modify
 __modifyAccess=Modify access
 __move=Move
