--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -344,6 +344,8 @@ incoming.subject=Subject
 incoming.folder=Folder
 incoming.select=Choose an alias
 
+nav.noEntries=No more entries
+
 notify.subject=Scheduled mail notification for
 notify.error.attribute=Error processing attribute
 
