--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -331,6 +331,10 @@ forum.unseenCounts.notLoggedIn=Your session has timed out. Please log in again.
 
 general.please_select=--select one--
 
+icon.close=Close
+icon.move=Move
+icon.resize=Resize
+
 incoming.alias=Alias
 incoming.aliases=Aliases
 incoming.forums=Associated forum(s)
