--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -327,6 +327,7 @@ forum.configure.workflowAssociations=Workflow associations
 forum.notConfigured=The portlet preferences are not set. Choose the edit button to configure the portlet.
 forum.selectForums=Select the forums to be shown:
 forum.selectedForums=Currently selected forums:
+forum.unread=Unread entries
 forum.unseenCounts.notLoggedIn=Your session has timed out. Please log in again.
 
 general.please_select=--select one--
