--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -37,7 +37,7 @@ __description=Description
 __div=Div
 __divider=Divider
 __emailAddress=Email address
-__endParallelThread=Parallel workflow thread ends
+__endState=End state
 __entry_attachments=Entry attachments
 __entry_data_item=Entry data item
 __entry_definition=Entry definition
@@ -88,7 +88,6 @@ __html_editor_text_area=HTML editor text area
 __html_top=HTML top
 __id=ID
 __initialState=Initial state
-__initialStateSelect=Select the initial state for this workflow
 __inline=Inline
 __layout_options=Layout options
 __left=Left
@@ -141,6 +140,7 @@ __size=Size
 __startParallelThread=Start a parallel workflow thread
 __startState=Start state
 __state=State
+__stopParallelThread=Stop a workflow thread
 __storage_media=Repository system
 __style=Style
 __text=Text
@@ -349,7 +349,11 @@ incoming.subject=Subject
 incoming.folder=Folder
 incoming.select=Choose an alias
 
+nav.firstEntry=First entry
+nav.lastEntry=Last entry
+nav.nextEntry=Next entry
 nav.noEntries=No more entries
+nav.prevEntry=Previous entry
 
 notify.subject=Scheduled mail notification for
 notify.error.attribute=Error processing attribute
@@ -385,6 +389,7 @@ workarea_operation.manageWorkflowDefinitions=Design workflows
 workarea_operation.siteAdministration=Site administration
 
 workflow=Workflow
+workflow.transitionTo=Transition to:
 
 ##Used in workspace tree
 tree.choose_forum=Choose a Forum
