--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -147,6 +147,7 @@ __text=Text
 __title=Title
 __tool_bar=Tool bar
 __toState=To state
+__toStateAfterWait=When the selected threads have all ended, transition to state:
 __transition=Transition
 __transitionConditional=Conditional transition
 __transitionManual=Manual transition
