user list support

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -376,6 +376,13 @@ toolbar.delete=Delete
 toolbar.modify=Modify
 toolbar.showUnseen=Show count of recent unread entries
 
+userlist.dragLeft=Drag to the left to add a name.
+userlist.dragRight=Drag to the right to delete a name.
+userlist.firstName=First name
+userlist.lastName=Last name
+userlist.loginName=Login name
+userlist.findName=Find a name
+
 ## WorkArea Operations (used in functions/roles)
 workarea_operation.view=View
 workarea_operation.createEntries=Create entries
