user list support

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -107,7 +107,8 @@ __onclick_routine=OnClick routine
 __onEntry=On entry
 __onExit=On exit
 __organization=Organization
-__parallelStateName=Parallel execution name
+__parallelStateName=Parallel thread name
+__parallelStateCaption=Caption
 __profile_data_item_name=Profile element
 __profile_element=Profile element
 __profile_elements=Profile elements
