--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -360,6 +360,11 @@ nav.prevEntry=Previous entry
 notify.subject=Scheduled mail notification for
 notify.error.attribute=Error processing attribute
 
+presence.away=Away
+presence.none=No Zon presence
+presence.online=Online
+presence.offline=Offline
+
 selected.none=--none--
 
 toolbar.add=Add entry
