More changes to WS infrastructure; Integrate request context management; Ties WS-Security authentication with our context setup; Better exception handling of unauthenticated user access/session expiration situation for web app;

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -283,7 +283,7 @@ errorcode.no.workspace.by.the.id=No such workspace by the id ''{0}''
 errorcode.no.workspace.by.the.name=No such workspace by the name ''{0}''
 errorcode.salary.maxed.out=Cannot honor the request because {0}''s salary is capped at ${1}
 errorcode.operation.denied=<i>{0}</i> is unauthorized to perform <i>{1}</i> operation to the work area {2}
-errorcode.no.valid.user.session=User session has been expired or invalidated. Please log in again.
+errorcode.unauthenticated.access=Access denied. User is either unauthenticated or the session has been expired. 
 errorcode.write.files=Failed to write ''{1}'' files out of ''{2}'' for entry ''{0}'' 
 
 
