Remove horizontal display style

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -372,11 +372,10 @@ toolbar.administration=Administration
 toolbar.menu.configuration=Configure
 toolbar.menu.definition_builder=Definition builder
 toolbar.display_styles=Display styles
-toolbar.menu.display_style_horizontal=Horizontal
-toolbar.menu.display_style_vertical=Vertical
+toolbar.menu.display_style_vertical=Show entries at the bottom
 toolbar.menu.display_style_accessible=Accessible
-toolbar.menu.display_style_iframe=IFrame
-toolbar.menu.display_style_popup=Pop up
+toolbar.menu.display_style_iframe=Show entries as an overlay
+toolbar.menu.display_style_popup=Show entries in a pop-up window
 toolbar.reply=Reply
 toolbar.delete=Delete
 toolbar.modify=Modify
