--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -360,10 +360,20 @@ nav.prevEntry=Previous entry
 notify.subject=Scheduled mail notification for
 notify.error.attribute=Error processing attribute
 
+presence.addToOutlook=
 presence.away=Away
+presence.call=Call...
+presence.isAway=is away
+presence.isOffline=is offline
+presence.isOnline=is online
 presence.none=No Zon presence
 presence.online=Online
 presence.offline=Offline
+presence.scheduleMeeting=Schedule a meeting...
+presence.sendIM=Send instant message...
+presence.sendMail=Send mail
+presence.startIM=Start instant meeting...
+presence.statusAt=status at
 
 selected.none=--none--
 
