I18N for date picker

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -109,6 +109,7 @@ __onExit=On exit
 __organization=Organization
 __parallelStateName=Parallel thread name
 __parallelStateCaption=Caption
+__parallelThread=Parallel workflow thread
 __profile_data_item_name=Profile element
 __profile_element=Profile element
 __profile_elements=Profile elements
@@ -204,6 +205,7 @@ administration.configure_search_index=Manage the search index
 administration.configure_profile_index=Index users and groups
 administration.selectFiles=Select files
 administration.importDefinitions=Import definitions
+
 button.add=Add
 button.add_alias=Add alias
 button.cancel=Cancel
@@ -212,6 +214,7 @@ button.delete=Delete
 button.home=Home
 button.modify=Modify
 button.ok=OK
+button.today=Today
 
 calendar.january=January
 calendar.february=February
@@ -226,6 +229,19 @@ calendar.october=October
 calendar.november=November
 calendar.december=December
 
+calendar.abbreviation.january=Jan
+calendar.abbreviation.february=Feb
+calendar.abbreviation.march=Mar
+calendar.abbreviation.april=Apr
+calendar.abbreviation.may=May
+calendar.abbreviation.june=Jun
+calendar.abbreviation.july=Jul
+calendar.abbreviation.august=Aug
+calendar.abbreviation.september=Sep
+calendar.abbreviation.october=Oct
+calendar.abbreviation.november=Nov
+calendar.abbreviation.december=Dec
+
 calendar.day.abbrevs.mo=Mon
 calendar.day.abbrevs.tu=Tue
 calendar.day.abbrevs.we=Wed
@@ -233,6 +249,14 @@ calendar.day.abbrevs.th=Thu
 calendar.day.abbrevs.fr=Fri
 calendar.day.abbrevs.sa=Sat
 calendar.day.abbrevs.su=Sun
+
+calendar.day.abbrev1.mo=M
+calendar.day.abbrev1.tu=T
+calendar.day.abbrev1.we=W
+calendar.day.abbrev1.th=T
+calendar.day.abbrev1.fr=F
+calendar.day.abbrev1.sa=S
+calendar.day.abbrev1.su=S
 
 calendar.day.names.mo=Monday
 calendar.day.names.tu=Tuesday
@@ -350,6 +374,8 @@ incoming.disabled=Incoming e-mail is disabled for this site
 incoming.subject=Subject
 incoming.folder=Folder
 incoming.select=Choose an alias
+
+loading=Loading...
 
 nav.firstEntry=First entry
 nav.lastEntry=Last entry
