fix up acls on mail, more internationalization, remove transaction wrappers around ldap and mail

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -374,6 +374,21 @@ incoming.disabled=Incoming e-mail is disabled for this site
 incoming.subject=Subject
 incoming.folder=Folder
 incoming.select=Choose an alias
+incoming.disable.all=Disable all incoming e-mail
+
+ldap.title=Configure Ldap Synchronization
+ldap.session=Session synchronization 
+ldap.schedule=Scheduled synchronization
+ldap.session.sync=User account synchronization
+ldap.session.register=Automatic registration of accounts
+ldap.schedule.user.sync=User profile synchronization
+ldap.schedule.user.register=Automatic registration of user profiles
+ldap.schedule.user.disable=Disable users not in LDAP
+ldap.schedule.group.sync=Group profile synchronization
+ldap.schedule.group.register=Automatic registration of group profiles
+ldap.schedule.group.disable=Disable groups not in LDAP
+ldap.schedule.membership.sync=Synchronization of group membership
+ldap.schedule.Disable=schedule
 
 loading=Loading...
 
@@ -385,6 +400,16 @@ nav.prevEntry=Previous entry
 
 notify.subject=Scheduled mail notification for
 notify.error.attribute=Error processing attribute
+notify.title=Set the outgoing e-mail schedule
+notify.choose=Choose a folder
+notify.disable=Disable outgoing e-mail
+notify.schedule=Specify when e-mail notification is sent
+notify.distributionlist=Set the default distribution list
+notify.groups=Send to a group (or groups)
+notify.selected.users=Send to selected users
+notify.addresses=Send to a list of e-mail addresses.
+notify.addresses.instructions= (Enter one e-mail address per line)
+notify.folder.label=Folder:
 
 presence.addToOutlook=
 presence.away=Away
@@ -400,6 +425,14 @@ presence.sendIM=Send instant message...
 presence.sendMail=Send mail
 presence.startIM=Start instant meeting...
 presence.statusAt=status at
+
+schedule.repeat=Repeat every
+schedule.minutes=minutes
+schedule.atminutes=At minutes(s)
+schedule.hours=hours
+schedule.athours=At hour(s)
+schedule.everyday=Every day
+schedule.weekly=Weekly (on the days selected below)
 
 selected.none=--none--
 
