--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -269,6 +269,16 @@ calendar.day.names.su=Sunday
 calendar.day.names.weekday=weekday
 calendar.day.names.weekendday=weekend day
 
+calendar.first=first
+calendar.second=second
+calendar.third=third
+calendar.fourth=fourth
+calendar.last=last
+calendar.start=Start
+calendar.end=End
+calendar.frequency=Frequency
+calendar.when=When
+
 definition.builder=Definition builder
 definition.error.illegalMoveInto=Error: The target element cannot receive this element
 definition.error.invalidCharacter=Error: invalid character entered
