--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -177,7 +177,7 @@ __user_list=User list
 __userGroupAccess=Users and groups
 __view_entry_selectbox=View entry selectbox
 __view_jsp_name=View jsp name
-__waitForParallelThread=Wait for parallel thread to end
+__waitForParallelThread=Wait for parallel thread(s) to end
 __width=Width
 __workflow_process=Workflow process
 __workflow_processes=Workflow processes
@@ -278,6 +278,7 @@ calendar.start=Start
 calendar.end=End
 calendar.frequency=Frequency
 calendar.when=When
+calendar.view.popupAltText=Navigate to a different day, week or month.
 
 definition.builder=Definition builder
 definition.error.illegalMoveInto=Error: The target element cannot receive this element
