Add workflow notification xml element

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -44,11 +44,13 @@ __entry_definition=Entry definition
 __entry_definitions=Entry definitions
 __entry_form_definition=Entry form definition
 __entry_layout_options=Entry layout options
+__entry_notification=Notification on entry into this state
 __entry_replies=Entry replies
 __entry_view_definition=Entry view definition
 __entry_workflow=Entry workflow
 __entryCreator=Entry creator
 __event=Event
+__exit_notification=Notification on exit from this state
 __fieldset=Fieldset
 __file_system=File system
 __file_upload=File upload
@@ -174,7 +176,7 @@ __two_column_table=Two column table
 __three_column_table=Three column table
 __type=Type
 __user_list=User list
-__userGroupAccess=Users and groups
+__userGroup=Users and groups
 __view_entry_selectbox=View entry selectbox
 __view_jsp_name=View jsp name
 __waitForParallelThread=Wait for parallel thread(s) to end
