workflow notification text

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -102,6 +102,10 @@ __move=Move
 __name=Name
 __navigation_bar=Navigation bar
 __notifications=Notifications
+__notification_append_title=Append the entry title
+__notification_append_body=Append the entry body 
+__notification_body_text=Text to be put in the notification body
+__notification_subject_text=Text to be put in the notification subject line
 __number_of_file_select_boxes_to_be_shown=Number of file select boxes to be shown
 __ok=OK
 __ok_button=OK button
