--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -405,7 +405,7 @@ ldap.schedule.group.sync=Group profile synchronization
 ldap.schedule.group.register=Automatic registration of group profiles
 ldap.schedule.group.disable=Disable groups not in LDAP
 ldap.schedule.membership.sync=Synchronization of group membership
-ldap.schedule.disable=schedule
+ldap.schedule.disable=Disable schedule
 
 loading=Loading...
 
