--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -160,7 +160,10 @@ __transition=Transition
 __transitionConditional=Conditional transition
 __transitionManual=Manual transition
 __transition_condition_on_date=Transition when date past
+__transition_condition_on_days=Days
 __transition_condition_on_elapsed_time=Transition after time elapsed
+__transition_condition_on_hours=Hours
+__transition_condition_on_mins=Minutes
 __transition_condition_on_modify=Transition on modify
 __transition_condition_on_reply=Transition on reply
 __transition_condition_on_response=Transition on response
