--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -366,6 +366,11 @@ exception.notAvailable.message=That resource is not available.
 
 exception.contactAdmin=Please contact your System Administrator for assistance.
 
+filter.author=Entry creator
+filter.creationDate=Entry creation date
+filter.modificationDate=Last modification date
+filter.title=Title
+
 forum.configure.defaultView=Default folder view
 forum.configure.defaultEntryTypes=Default entry types
 forum.configure.profileEntryType=Profile type
