Support for modifying and deleting filters

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -367,6 +367,7 @@ exception.notAvailable.message=That resource is not available.
 exception.contactAdmin=Please contact your System Administrator for assistance.
 
 filter.author=Entry creator
+filter.commonElements=--common elements--
 filter.creationDate=Entry creation date
 filter.modificationDate=Last modification date
 filter.title=Title
