--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -49,6 +49,7 @@ __entry_replies=Entry replies
 __entry_view_definition=Entry view definition
 __entry_workflow=Entry workflow
 __entryCreator=Entry creator
+__entryDataElements=Entry data elements
 __event=Event
 __exit_notification=Notification on exit from this state
 __fieldset=Fieldset
