Add menu tag Fix folder listing to use the menu tag Fix pop-up entries to save widht and height Add base command for setting folder acl (not finished)

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -216,6 +216,8 @@ administration.configure_profile_index=Index users and groups
 administration.selectFiles=Select files
 administration.importDefinitions=Import definitions
 
+binder.configure.access_control=Configure access control
+
 button.add=Add
 button.add_alias=Add alias
 button.cancel=Cancel
@@ -303,6 +305,7 @@ definition.select_item_select=--make a selection--
 definition.select_reply_styles=--select reply types--
 definition.workflow_save_layout=Save layout
 
+edit=edit
 entry.noTitle=no title
 
 errorcode.acl.denied={0} has no {1} access to the object
@@ -370,6 +373,7 @@ exception.contactAdmin=Please contact your System Administrator for assistance.
 filter.author=Entry creator
 filter.commonElements=--common elements--
 filter.creationDate=Entry creation date
+filter.filter=Filter
 filter.modificationDate=Last modification date
 filter.title=Title
 
@@ -425,6 +429,8 @@ nav.nextEntry=Next entry
 nav.noEntries=No more entries
 nav.prevEntry=Previous entry
 
+none=none
+
 notify.subject=Scheduled mail notification for
 notify.error.attribute=Error processing attribute
 notify.title=Set the outgoing e-mail schedule
@@ -465,6 +471,7 @@ selected.none=--none--
 
 toolbar.add=Add entry
 toolbar.administration=Administration
+toolbar.menu.accessControl=Access control
 toolbar.menu.configuration=Configure
 toolbar.menu.definition_builder=Definition builder
 toolbar.display_styles=Display styles
