--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -220,6 +220,7 @@ binder.configure.access_control=Configure access control
 
 button.add=Add
 button.add_alias=Add alias
+button.apply=Apply
 button.cancel=Cancel
 button.close=Close
 button.delete=Delete
@@ -291,6 +292,8 @@ calendar.end=End
 calendar.frequency=Frequency
 calendar.when=When
 calendar.view.popupAltText=Navigate to a different day, week or month.
+
+common.select.none=--none--
 
 definition.builder=Definition builder
 definition.error.illegalMoveInto=Error: The target element cannot receive this element
@@ -377,6 +380,7 @@ filter.filter=Filter
 filter.modificationDate=Last modification date
 filter.title=Title
 
+forum.configure.allowedViews=Allowed folder views
 forum.configure.defaultView=Default folder view
 forum.configure.defaultEntryTypes=Default entry types
 forum.configure.profileEntryType=Profile type
