--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -373,12 +373,23 @@ exception.notAvailable.message=That resource is not available.
 
 exception.contactAdmin=Please contact your System Administrator for assistance.
 
+filter.add=Add a new filter
 filter.author=Entry creator
 filter.commonElements=--common elements--
+filter.confirmDelete=Please confirm that you want to delete the filter named:
 filter.creationDate=Entry creation date
+filter.enterName=Please fill in the filter name field.
+filter.entryAttributes=Entry attributes
 filter.filter=Filter
+filter.filterAddModDelete=Add, modify or delete filters
+filter.filterName=Filter name
 filter.modificationDate=Last modification date
+filter.searchText=Search text
+filter.selectFilter=--select the filter to be modified or deleted--
+filter.selectFilterType=Select the type of filter to be added...
+filter.terms=Filter terms
 filter.title=Title
+filter.workflowStates=Workflow states
 
 forum.configure.allowedViews=Allowed folder views
 forum.configure.defaultView=Default folder view
