Enhance fileupload error processings so that appropriate status information can be displayed to user upon full or partial failure

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -373,6 +373,13 @@ exception.notAvailable.message=That resource is not available.
 
 exception.contactAdmin=Please contact your System Administrator for assistance.
 
+fileupload.error.storing.primary.file=Error storing primary file
+fileupload.error.generating.scaled.file=Error generating scaled file
+fileupload.error.storing.scaled.file=Error storing scaled file
+fileupload.error.generating.thumbnail.file=Error generating thumbnail file
+fileupload.error.storing.thumbnail.file=Error storing thumbnail file
+fileupload.error.other=Error processing file
+
 filter.add=Add a new filter
 filter.author=Entry creator
 filter.commonElements=--common elements--
