--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -313,6 +313,7 @@ entry.noTitle=no title
 
 errorcode.acl.denied={0} has no {1} access to the object
 errorcode.checked.out.by.other=For entry ''{0}'' the file ''{1}'' is already checked out by ''{2}''
+errorcode.content.filter=Failed to filter the content of ''{0}''
 errorcode.definition.invalid=Invalid definition ''{0}''
 errorcode.definition.operation.invalid=Invalid operation
 errorcode.folder.hierarchy.invalid=The hierarchy of the folder ''{0}'' is invalid
