--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -483,6 +483,8 @@ presence.sendMail=Send mail
 presence.startIM=Start instant meeting...
 presence.statusAt=status at
 
+profile.list=List users
+
 schedule.repeat=Repeat every
 schedule.minutes=minutes
 schedule.atminutes=At minutes(s)
