--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -199,6 +199,7 @@ __zonName=Zon user name
 administration.configure_ldap=Configure LDAP
 administration.configure_roles=Configure Forum role definitions
 administration.configure_roles.add=Add a new role
+administration.configure_roles.configure=Configure Forum roles
 administration.configure_roles.existing=Currently defined roles
 administration.configure_roles.name=Role name
 administration.definition_builder=Definition builder
@@ -217,7 +218,11 @@ administration.selectFiles=Select files
 administration.importDefinitions=Import definitions
 
 binder.configure.access_control=Configure access control
-
+binder.configure.access_control.addRole=Add a role
+binder.configure.access_control.currentMembership=Current role membership settings
+binder.configure.access_control.inheriting=This folder is inheriting its access control settings from its parent folder.
+binder.configure.access_control.nosettings=No roles have been configured.
+binder.configure.access_control.selectRole=--Select the role to be added--
 button.add=Add
 button.add_alias=Add alias
 button.apply=Apply
@@ -518,17 +523,22 @@ userlist.loginName=Login name
 userlist.findName=Find a name
 
 ## WorkArea Operations (used in functions/roles)
-workarea_operation.view=View
-workarea_operation.createEntries=Create entries
-workarea_operation.deleteEntries=Delete entries
 workarea_operation.addReplies=Add replies
-workarea_operation.generateReports=Generate reports
-workarea_operation.performAdministration=Perform administration
 workarea_operation.changeAccessControl=Change access control
+workarea_operation.createEntries=Create entries
 workarea_operation.createFolders=Create folders
+workarea_operation.creatorDeleteEntries=Delete entries that you created
+workarea_operation.creatorModifyEntries=Modify entries that you created
+workarea_operation.creatorReadEntries=Read entries that you created
+workarea_operation.deleteEntries=Delete entries
+workarea_operation.generateReports=Generate reports
 workarea_operation.manageEntryDefinitions=Design entries
 workarea_operation.manageWorkflowDefinitions=Design workflows
+workarea_operation.modifyEntries=Modify entries
+workarea_operation.performAdministration=Perform administration
+workarea_operation.readEntries=Read entries
 workarea_operation.siteAdministration=Site administration
+workarea_operation.view=View
 
 workflow=Workflow
 workflow.transitionTo=Transition to:
