Work is progressing on "configure access control" for folders

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -219,10 +219,14 @@ administration.importDefinitions=Import definitions
 
 binder.configure.access_control=Configure access control
 binder.configure.access_control.addRole=Add a role
-binder.configure.access_control.currentMembership=Current role membership settings
+binder.configure.access_control.currentMembershipSettings=Current role membership settings
+binder.configure.access_control.groups=Groups
 binder.configure.access_control.inheriting=This folder is inheriting its access control settings from its parent folder.
 binder.configure.access_control.nosettings=No roles have been configured.
+binder.configure.access_control.role=Role
 binder.configure.access_control.selectRole=--Select the role to be added--
+binder.configure.access_control.users=Users
+
 button.add=Add
 button.add_alias=Add alias
 button.apply=Apply
