--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -344,7 +344,8 @@ errorcode.no.workspace.by.the.id=No such workspace by the id ''{0}''
 errorcode.no.workspace.by.the.name=No such workspace by the name ''{0}''
 errorcode.salary.maxed.out=Cannot honor the request because {0}''s salary is capped at ${1}
 errorcode.operation.denied=<i>{0}</i> is unauthorized to perform <i>{1}</i> operation to the work area {2}
-errorcode.unauthenticated.access=Access denied. User is unauthenticated or the session has expired. 
+errorcode.unauthenticated.access=Access denied. User is unauthenticated or the session has expired.
+errorcode.workareafunctionmembership.exists=Membership already exists for function ''{1}'' at work area ''{0}''
 errorcode.write.files=Failed to write ''{1}'' files out of ''{2}'' for entry ''{0}'' 
 
 
