Work done on user filters

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -455,7 +455,8 @@ ldap.schedule.group.disable=Disable groups not in LDAP
 ldap.schedule.membership.sync=Synchronization of group membership
 ldap.schedule.disable=Disable schedule
 
-loading=Loading...
+loading=loading...
+Loading=Loading...
 
 nav.firstEntry=First entry
 nav.lastEntry=Last entry
