More work on access control ui

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -224,6 +224,7 @@ binder.configure.access_control.groups=Groups
 binder.configure.access_control.inheriting=This folder is inheriting its access control settings from its parent folder.
 binder.configure.access_control.nosettings=No roles have been configured.
 binder.configure.access_control.role=Role
+binder.configure.access_control.selectRoleWarning=Please select a role.
 binder.configure.access_control.selectRole=--Select the role to be added--
 binder.configure.access_control.users=Users
 
