Finish access control UI

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -218,10 +218,11 @@ administration.selectFiles=Select files
 administration.importDefinitions=Import definitions
 
 binder.configure.access_control=Configure access control
-binder.configure.access_control.addRole=Add a role
+binder.configure.access_control.addRole=Define role membership
 binder.configure.access_control.currentMembershipSettings=Current role membership settings
 binder.configure.access_control.groups=Groups
 binder.configure.access_control.inheriting=This folder is inheriting its access control settings from its parent folder.
+binder.configure.access_control.modifyRole=Modify role membership
 binder.configure.access_control.nosettings=No roles have been configured.
 binder.configure.access_control.role=Role
 binder.configure.access_control.selectRoleWarning=Please select a role.
