add addfolder support

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -412,6 +412,11 @@ filter.terms=Filter terms
 filter.title=Title
 filter.workflowStates=Workflow states
 
+folder.label.title=Title
+folder.label.name = Name
+folder.label.description=Description
+folder.add.title=Add folder
+
 forum.configure.allowedViews=Allowed folder views
 forum.configure.defaultView=Default folder view
 forum.configure.defaultEntryTypes=Default entry types
@@ -513,6 +518,7 @@ toolbar.administration=Administration
 toolbar.menu.accessControl=Access control
 toolbar.menu.configuration=Configure
 toolbar.menu.definition_builder=Definition builder
+toolbar.menu.addFolder=Add folder
 toolbar.display_styles=Display styles
 toolbar.menu.display_style_vertical=Show entries at the bottom
 toolbar.menu.display_style_accessible=Accessible
