--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -13,6 +13,7 @@ __add_a_new_workflow_process=Add a new workflow process
 __alignment=Alignment
 __allow_multiple=Allow multiple
 __attach_files=Attach files
+__box=Box
 __button_text=Button text
 __calendar_view=Calendar view
 __can_recur=Can recur?
@@ -52,10 +53,12 @@ __entryCreator=Entry creator
 __entryDataElements=Entry data elements
 __event=Event
 __exit_notification=Notification on exit from this state
+__expandable_div=Expandable area
 __fieldset=Fieldset
 __file_system=File system
 __file_upload=File upload
 __filter_bar=Filter bar
+__firstName=First name
 __folderDefault=Folder default access
 __folder_listing=Folder listing
 __folder_folder=Entry folder
@@ -92,11 +95,13 @@ __html_top=HTML top
 __id=ID
 __initialState=Initial state
 __inline=Inline
+__lastName=Last name
 __layout_options=Layout options
 __left=Left
 __legend=Legend
 __max_graphic_height=Maximum graphic height (in pixels)
 __max_graphic_width=Maximum graphic width (in pixels)
+__middleName=Middle name
 __modify=Modify
 __modifyAccess=Modify access
 __move=Move
@@ -128,6 +133,7 @@ __profile_entry_view=Profile view
 __profile_entry_view_definition=Profile view definition
 __profile_listing=Profile listing
 __profile_name=User name
+__profile_title=User title
 __profile_view=Profile listing
 __profile_view_definition=Profile listing definition
 __profile_views=Profile listings
